# mao-merge-45m

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: mao_merge_45m.accelerometer.doctree  mao_merge_45m.accelerometer_csv.doctree  mao_merge_45m.antenna.doctree  mao_merge_45m.antenna_50_sps.doctree  mao_merge_45m.correlator.doctree  mao_merge_45m.doctree  mao_merge_45m.merge.doctree  mao_merge_45m.sam45.doctree  mao_merge_45m.weather.doctree
.github/workflows/: tests.yml
_apidoc/: mao_merge_45m.accelerometer.html  mao_merge_45m.accelerometer_csv.html  mao_merge_45m.antenna.html  mao_merge_45m.antenna_50_sps.html  mao_merge_45m.correlator.html  mao_merge_45m.html  mao_merge_45m.merge.html  mao_merge_45m.sam45.html  mao_merge_45m.weather.html
_modules/: index.html
_modules/mao_merge_45m/: accelerometer.html  accelerometer_csv.html  antenna.html  antenna_50_sps.html  correlator.html  merge.html  sam45.html  weather.html
_sources/: index.md.txt
_sources/_apidoc/: mao_merge_45m.accelerometer.rst.txt  mao_merge_45m.accelerometer_csv.rst.txt  mao_merge_45m.antenna.rst.txt  mao_merge_45m.antenna_50_sps.rst.txt  mao_merge_45m.correlator.rst.txt  mao_merge_45m.merge.rst.txt  mao_merge_45m.rst.txt  mao_merge_45m.sam45.rst.txt  mao_merge_45m.weather.rst.txt
data/: accelerometer_20201123T004000Z.gbd  antenna_20201123T004100Z.txt  power_meter_2022144230000Z.csv  speed_dir_20201102.csv  thermometer_20220430T150000.txt  weather_20201123T004000Z.csv
data/distribution_20201123T004100Z.zarr/: .zmetadata
data/distribution_20201123T004100Z.zarr/accelerometer_ch1/: .zattrs  0
data/distribution_20201123T004100Z.zarr/antenna_azimuth/: 0  (+1 more)
docs/: build  conf.py  index.md  index.rst
mao_merge_45m/: __init__.py  accelerometer.py  accelerometer_csv.py  antenna.py  antenna_50_sps.py  antenna_50sps.py  correlator.py  merge.py  power_meter.py  sam45.py  thermometer.py  weather.py
nro45_merge/: __init__.py  accelerometer.py  antenna.py  cli.py  correlator.py  merge.py  weather.py
scripts/: merge.py  setup
tests/: test_accelerometer.py  test_antenna.py  test_correlator.py  test_merge.py  test_metadata.py  test_power_meter.py  test_thermometer.py  test_weather.py
(+30 files in other folders)
