[tool.poetry]
name = "nro45-merge"
version = "0.1.0"
description = "Merge MAO datasets observed with NRO 45m telescope into a single netCDF file"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
dask = {version = "^2021.5", extras = ["complete"]}
fire = "^0.4"
matplotlib = "^3.4"
numpy = "^1.20.3"
pandas = "^1.2"
tomlkit = "^0.7"
tqdm = "^4.61"
xarray = "^0.18"
xarray-dataclasses = "^0.3"
zarr = "^2.8.3"

[tool.poetry.dev-dependencies]
black = "^21.5b"
flake8 = "^3.9"
ipython = "^7.24"
pytest = "^6.2"

[tool.poetry.scripts]
nro45-merge = "nro45_merge.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
