[tool.poetry]
name = "nro45-merge"
version = "0.1.0"
description = "Merge MAO datasets observed with NRO 45m telescope into a single Zarr file"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
dask = {version = "^2021.5", extras = ["complete"]}
matplotlib = "^3.4"
numpy = "^1.21"
pandas = "^1.3"
scipy = "^1.7"
tomlkit = "^0.7"
tqdm = "^4.61"
typing-extensions = "^3.10"
xarray = "^0.19"
xarray-dataclasses = "^0.4"
zarr = "^2.9"

[tool.poetry.dev-dependencies]
black = "^21.8b"
flake8 = "^3.9"
ipython = "^7.27"
pydata-sphinx-theme = "^0.6"
pytest = "^6.2"
sphinx = "^4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
