[tool.poetry]
name = "mao-merge-45m"
version = "0.1.0"
description = "Merge MAO datasets observed with NRO 45m telescope into a single Zarr file"
authors = ["Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
dask = { version = "^2022.5", extras = ["complete"] }
matplotlib = "^3.5"
numpy = "^1.22"
pandas = "^1.4"
scipy = "^1.8"
tomlkit = "^0.10"
tqdm = "^4.64"
typing-extensions = "^3.10"
xarray = "^2022.3"
xarray-dataclasses = "^1.1"
zarr = "^2.11"

[tool.poetry.group.dev.dependencies]
black = "^22.3"
ipython = "^8.2"
myst-parser = "^0.17"
pydata-sphinx-theme = "^0.8"
pytest = "^7.1"
sphinx = "^4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
